<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:binding="http://schemas.android.com/tools"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="presenter"
            type="sl.wo.ip.uisl.main.MainActivity.SLClick" />


        <variable
            name="sidebarShowsSL"
            type="Boolean"
            android:value="false" />

        <variable
            name="dataEmpty"
            type="Boolean"
            android:value="false" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#E6F9FF"
            tools:context=".uisl.main.MainActivity">

            <include
                android:id="@+id/in_main_title"
                layout="@layout/layout_toolbar_sl"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="36dp"
                android:layout_marginTop="-100dp"
                android:layout_marginEnd="36dp"
                android:background="@drawable/radio_group_bg"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/in_main_title">

                <RadioButton
                    android:id="@+id/radio_button0"
                    style="@style/radio_group"
                    android:checked="true"
                    android:text="@string/locked_apps" />

                <View
                    android:id="@+id/view"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp"
                    android:layout_marginTop="7dp"
                    android:layout_marginBottom="7dp"
                    android:background="#DCE1EF"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <RadioButton
                    android:id="@+id/radio_button1"
                    style="@style/radio_group"
                    android:text="@string/installed_apps" />

            </RadioGroup>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radio_group">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rec_app_list"
                    android:layout_width="match_parent"
                    android:layout_height="462dp"
                    android:layout_margin="16dp"
                    android:background="@drawable/bg_app_list"
                    android:visibility="@{dataEmpty ? View.VISIBLE : View.GONE}"
                    tools:listitem="@layout/item_app" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/con_list_empty"
                    android:layout_width="match_parent"
                    android:layout_height="462dp"
                    android:layout_margin="16dp"
                    android:background="@drawable/bg_app_list"
                    android:visibility="@{dataEmpty ? View.GONE : View.VISIBLE}">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:src="@drawable/ic_list_enmty"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.3" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="40dp"
                        android:layout_marginTop="37dp"
                        android:layout_marginEnd="40dp"
                        android:gravity="center"
                        android:text="@string/apps_list_empty"
                        android:textColor="#FF191C1D"
                        android:textSize="14sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/imageView" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingStart="16dp"
                android:paddingTop="18dp"
                android:paddingEnd="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <include
            android:id="@+id/in_home_navigation"
            layout="@layout/layout_main_navigation"
            android:visibility="@{sidebarShowsSL ? View.VISIBLE : View.GONE}"
            binding:presenter="@{presenter}" />

    </FrameLayout>

</layout>
